--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Vite + React + TS</title>
     </head>
     <body class="font-body h-full">
-        <div id="root" class="min-h-screen"></div>
+        <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
